src/app/datapipe/viewstream-dialog/viewstream-dialog.component.scss
html, body
{
    height: 100vh;
}

.stream-container {
    margin-top: 10px;
}

.code-container {
    font-size: 16px;
    font-family: Consolas, monospace;  /* Monospace font for code */
    background-color: #f5f5f5;  /* Light background */
    color: #333333;  /* Dark font color */
    padding: 15px;  /* Add some padding for better readability */
    border-radius: 5px;  /* Rounded corners */
    border: 1px solid #ccc;  /* Light gray border */
    white-space: pre-wrap;  /* Wrap long lines */
    line-height: 1.5;  /* Improve line spacing */
    overflow-y: auto; /* Enable vertical scrollbar if content overflows */
    overflow-x: auto; /* Enable horizontal scrollbar if content overflows */
}

.my-custom-ngx-diff-theme {
    --ngx-diff-font-size: 16px;
    --ngx-diff-font-family: Consolas, monospace;
    --ngx-diff-font-color: #333333;
    --ngx-diff-border-color: #ccc;
    
    --ngx-diff-line-number-font-color: #aaaaaa;
    --ngx-diff-line-number-hover-font-color:  #484848;
  
    --ngx-diff-selected-border-width: 0;
    --ngx-diff-selected-border-color: #000;
    --ngx-diff-selected-line-background-color: #d6f1ff;
  
    --ngx-diff-line-number-width: 2rem;
    --ngx-diff-border-width: 1px;
    --ngx-diff-line-left-padding: 1rem;
    --ngx-diff-bottom-spacer-height: 1rem;
    --ngx-diff-title-bar-padding: 0.5rem;
    --ngx-diff-title-font-weight: 600;
  
    --ngx-diff-insert-color: #d6ffd6;
    --ngx-diff-delete-color: #ffd6d6;
    --ngx-diff-equal-color: #ffffff;
    --ngx-diff-mix-color: #000;
    --ngx-diff-light-mix-percentage: 4%;
    --ngx-diff-heavy-mix-percentage: 10%;
  }

  textarea {
    width: 100%;
  }

